Fixed stack counts exceeding maximum stack size